<resources>
    <string name="app_name">LiveDemo</string>

    <!-- Strings related to login -->
    <string name="prompt_email">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">用户名不能为空</string>
    <string name="error_invalid_password">密码不能为空</string>

    <string name="pref_default_video_frame_rate">15</string>
    <string name="pref_video_frame_rate">framerate</string>

    <string name="pref_default_video_encoding_bit_rate">400</string>

    <string name="pref_video_encoding_bit_rate">bitrate</string>


    <string name="pref_default_video_size_width">640</string>
    <string name="pref_video_size_width">video width</string>


    <string name="pref_default_video_size_height">480</string>
    <string name="pref_video_size_height">video height</string>

    <string name="pref_default_video_publish_and_play_id">ucloud_demo</string>
    <string name="pref_default_video_publish_and_play_title">stream id</string>

    <string name="pref_default_log_cache_dir">/sdcard/ucloud/log</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login_activitys">Sign in</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="msg_1">msg_1</string>
    <string name="no_money">余额不足</string>
    <string name="recharge100">100元</string>
    <string name="recharge50">50元</string>
    <string name="recharge20">20元</string>
    <string name="recharge10">10元</string>
    <string name="recharge5">5元</string>
    <string name="recharge1">1元</string>
</resources>
